--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "lib/widgetfy"]
 	path = lib/widgetfy
-	url = git@github.com:Widgetarian/Widgetfy.git
+	url = https://github.com/Phata/Widgetfy.git
